Removed carousel, fixed class reference within nav bar, put images in figure elements with figcaption for captions and added spacing between these elements

--- a/main.css
+++ b/main.css
@@ -4,9 +4,10 @@ body {
     flex-direction: column;
 }
 
-#siteTitle { 
-    font-size: 50px; 
+#siteTitle {
+    font-size: 50px;
 }
+
 .navbar {
     background-color: rgb(227, 232, 236);
     color: black;
@@ -15,9 +16,15 @@ body {
     padding: 20px;
     box-shadow: 0 15px 15px rgba(0, 0, 0, 0.473);
     border-radius: 0px 0px 20px 20px;
-    margin-bottom: 25px; 
-    font-family: "Arial Black", "Arial Bold", Gadget, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; 
+    margin-bottom: 25px;
+    font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    line-height: 26.4px;
     width: 1250px;
+    display: inline;
 }
 
 .navLink {
